--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 RUINS Survival Game. All rights reserved.</p>
+        <p>&copy; 2025 RUINS Survival Game. By Klimentiy Serganin.</p>
     </footer>
 </body>
 </html>
