--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>RUINS Survival Game</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <header>
@@ -30,9 +30,15 @@
                 <p>Discover hidden treasures in abandoned ruins.</p>
             </div>
         </section>
+        <section class="links">
+            <h3>Links</h3>
+            <a href="https://www.youtube.com/@meltonnn" target="_blank" class="youtube">YouTube</a>
+            <a href="https://discord.gg/yfpuU6nsXm" target="_blank" class="discord">Discord</a>
+            <a href="https://www.donationalerts.com/r/sankreyt" target="_blank" class="support">Support</a>
+        </section>
     </main>
     <footer>
-        <p>&copy; 2025 RUINS Survival Game. By Klimentiy Serganin.</p>
+        <p>&copy; 2023 RUINS Survival Game. All rights reserved.</p>
     </footer>
 </body>
 </html>
