--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2023 RUINS Survival Game. All rights reserved.</p>
+        <p>&copy; © 2025 RUINS Survival Game. By Klimentiy Serganin.</p>
     </footer>
 </body>
 </html>
+
