--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
     </header>
     <main>
         <section class="hero">
-            <p>Survive the apocalypse in a world of ruins. Fight, build, and explore!</p>
+            <p>Krutaya Igra!</p>
             <button>Play Now</button>
         </section>
         <section class="features">
             <div class="feature">
                 <h3>Combat</h3>
-                <p>Engage in epic battles against mutants and scavengers.</p>
+                <p>Don't trust anyone!</p>
             </div>
             <div class="feature">
                 <h3>Building</h3>
-                <p>Construct shelters and fortifications to outlast the night.</p>
+                <p>Build bases to protect your resources!</p>
             </div>
             <div class="feature">
                 <h3>Exploration</h3>
@@ -38,8 +38,9 @@
         </section>
     </main>
     <footer>
-        <p>&copy; © 2025 RUINS Survival Game. By Klimentiy Serganin.</p>
+        <p>&copy; 2025 RUINS Survival Game.</p>
     </footer>
 </body>
 </html>
+
 
